# ChannelFlow-DoubleDiffusiveConvection

./: CMakeLists.txt  README.md  ShearedDDC_formulation.ipynb  makefile
ddc/: CMakeLists.txt  boundaryCondition.h  ddcdsi.cpp  ddcdsi.h  ddcflags.cpp  ddcflags.h  ddchelmholtz.cpp  ddchelmholtz.h  ddctausolver.cpp  ddctausolver.h  dde.cpp  macros.h  turbulenceStatistics.h
ddc/programs/: ddc_continuesoln.cpp  ddc_findeigenvals.cpp  ddc_simulateflow.cpp
ddc/tools/: CMakeLists.txt  ddc_initialfield.cpp  ddc_nusselt.cpp  ddc_reloadfield.cpp
